methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:3: error: not found: value LigneMotif
    LigneMotif()
    ^